samples/_failures_safe/1761688122_1aa421_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92418d95.c: In function ‘main’:
./samples/SAFE/__tmp_92418d95.c:145:13: error: expected expression at end of input
  145 |             if (mat1.rows ==
      |             ^~
./samples/SAFE/__tmp_92418d95.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_92418d95.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_92418d95.c:145:13: error: expected declaration or statement at end of input
